# printer-farm

./: README.md  docker-compose.yml  setup.sh
common-libs/protobuf-templates/: job.proto
common/utils/libs/: myzmqext.cpp  myzmqext.h
common/utils/types/: PrinterData.h
printer-farm-master/: .dockerignore  .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  README.md  cmake_install.cmake  job.pb.cc  job.pb.h  main.cpp  printer_farm_master  printer_farm_master.cbp  setup.sh
printer-farm-master/common/protobuf-templates/: pf_msg.proto
printer-farm-master/common/utils/libs/: mypbutils.h  zhelpers.hpp
printer-farm-master/common/utils/types/: Job.h
printer-farm-master/src/: BinaryFileReader.cpp  BinaryFileReader.h  DirScanner.cpp  DirScanner.h  PrinterFarmMaster.cpp  PrinterFarmMaster.h  PrinterPoolMenager.cpp  PrinterPoolMenager.h
printer-farm-slave/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  common-libs  main.cpp  pf_msg.pb.cc  pf_msg.pb.h
printer-farm-slave/common/utils/types/: commonsymbols.h
printer-farm-slave/src/: FakePrintStrategy.cpp  FakePrintStrategy.h  PrintStrategy.h  Printer.cpp  Printer.h  PrinterFarmSlave.cpp  PrinterFarmSlave.h
